# HP

./: .replit  REPLIT_SETUP.md  giveaway_debug.py  giveaway_solution.txt  giveaway_troubleshooting.py  pyproject.toml  requirements.txt  setup_replit.sh
DeepInfamousDirectories/: cookies.txt  main.py
