[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ss-bot"
version = "0.1.0"
description = "Discord server moderation and leveling bot"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "flask>=3.1.1",
    "python-dotenv>=1.1.1",
    "pillow>=10.0.0",
    "yt-dlp>=2024.1.0",
    "requests>=2.31.0",
    "pymongo>=4.7.0",
    "pynacl>=1.5.0",
]

[tool.poetry]
package-mode = false
