[tool.poetry]
name = "HP-bot"
version = "0.1.0"
description = "Discord server moderation and leveling bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.5.2"
flask = "^3.1.1"
python-dotenv = "^1.1.1"
pillow = "^10.0.0"
yt-dlp = "^2024.1.0"
requests = "^2.31.0"
pymongo = "^4.7.0"
pynacl = "^1.5.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]

[tool.poetry.urls]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
